--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,7 @@ main {
   min-height: 200px;
   font: normal 14px sans-serif;
   text-align: center;
-  background-color: #313b3f;
+  background-color: #0c1020;
   overflow: hidden;
   line-height: 25px;
   border-radius: 4px;
